Creado mediante Colaboratory

--- a/ETH_2MINERS_PROYECT.ipynb
+++ b/ETH_2MINERS_PROYECT.ipynb
@@ -7,7 +7,7 @@
       "provenance": [],
       "collapsed_sections": [],
       "mount_file_id": "1TBuRx19Ri2757jY79ctJWRNJF_RBOsQp",
-      "authorship_tag": "ABX9TyPkyRigb/hM0vX+NTd9TpdQ",
+      "authorship_tag": "ABX9TyPeM9zhp1rhVLedAfch9Wsh",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -31,7 +31,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 2,
       "metadata": {
         "id": "YW6Wxmbe0Dg3"
       },
@@ -52,8 +52,8 @@
       "cell_type": "code",
       "source": [
         "#Keys\n",
-        "API_KEY = 'C2G6I46K8BJC2VPJWMQ59KQ8U3DWQC9XVS'\n",
-        "#myurl = 'https://eth.2miners.com/api/accounts/0xad3f0d4dfbfa0199736a270c1ec08bf373478faa'  global eth\n",
+        "API_KEY = \n",
+        "#myurl = 'https://eth.2miners.com/api/accounts/0xad3f0d4dfbfa0199736a270c1ec08bf373478faa'\n",
         "eth_2miners = 1000000000\n",
         "eth_etherscan = 1000000000000000000"
       ],
@@ -186,7 +186,7 @@
       "metadata": {
         "id": "ou2XfWspipVJ"
       },
-      "execution_count": null,
+      "execution_count": 3,
       "outputs": []
     },
     {
@@ -769,7 +769,7 @@
       "metadata": {
         "id": "QzgNI-wbRf20"
       },
-      "execution_count": null,
+      "execution_count": 17,
       "outputs": []
     },
     {
@@ -794,7 +794,7 @@
         "id": "gwz8VGqIcV5E",
         "outputId": "c470a0d5-8ae0-4d7a-c98e-15e492011042"
       },
-      "execution_count": null,
+      "execution_count": 35,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1000,7 +1000,7 @@
         "id": "t1KjlemkuvE3",
         "outputId": "58757a7f-7883-4fc8-9093-3253a055302c"
       },
-      "execution_count": null,
+      "execution_count": 15,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1039,7 +1039,7 @@
         "id": "eDjb4XGpTJut",
         "outputId": "6b43e692-90f0-446a-e06c-75e9b63b3969"
       },
-      "execution_count": null,
+      "execution_count": 48,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1257,7 +1257,7 @@
         "id": "yYEyt7Wi9HmT",
         "outputId": "18f32fca-ebc1-40f8-8311-ccb5038422b0"
       },
-      "execution_count": null,
+      "execution_count": 46,
       "outputs": [
         {
           "output_type": "execute_result",
